--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -13,8 +13,8 @@
         {% endblock %}
     </div>
     <div id="sidebar">
-        {% block sidebar %}
-        {% endblock %}
+        <h2>My Blog</h2>
+        <p>This is my blog.</p>
     </div>
 </body>
 </html>
