--- a/mysite/main/templates/main/posts/detail.html
+++ b/mysite/main/templates/main/posts/detail.html
@@ -6,4 +6,11 @@
 Published {{ post.publish }} by {{ post.author }}
 </p>
 {{ post.body|linebreaks }}
+
+<p>
+    <a href="{% url "main:post_share" post.id %}">
+        Share this post
+    </a>
+</p>
+
 {% endblock %}
